# Cardthropic

./: .bacon.toml  .gitignore  .shellcheckrc  .woodpecker.yml  AI_BENCHMARK_TUNING.md  CHANGELOG.md  Cargo.toml  FREECELL_ROLLOUT.md  FREECELL_TEST_PLAN.md  Makefile  NOTES_DIFFERENTIATORS_DRAFT.md  README.md  RELEASE.md  SPIDER_TEST_PLAN.md  THIRD_PARTY_LICENSES.md  cardthropic.flatpak  cardthropic.flatpakrepo  deny.toml  io.codeberg.emviolet.cardthropic.json  io.codeberg.emviolet.cardthropic.json~  justfile  meson.build
benchmarks/: freecell_baseline.json
data/: io.codeberg.emviolet.cardthropic.desktop.in  io.codeberg.emviolet.cardthropic.gschema.xml  io.codeberg.emviolet.cardthropic.metainfo.xml.in  io.codeberg.emviolet.cardthropic.service.in  meson.build
data/icons/: meson.build
docs/: AI_BENCHMARK_TUNING.md  BOARD_RESIZE_EDGE_CASE_TEST_PLAN.md  BOARD_RESIZE_PHASE1_RESULTS.md  FREECELL_AI_WORKPLAN.md  FREECELL_ROLLOUT.md  FREECELL_TEST_PLAN.md  GSETTINGS_AUDIT.md  HANDOFF_0.9.5_BETA_TO_0.10.0_BETA_PRE.md  MOBILE-ADAPTIVE-PROJECT-COMPLETE-DETAILS.md  NOTES_DIFFERENTIATORS_DRAFT.md  README.md  SPIDER_ROLLOUT.md  STATE_FIELD_MATRIX.md  SVG_TO_CSS_UNICODE_TRANSITION.md  TOOLING_WORKFLOW.md
pages/: README.md  index.html  style.css
po/: POTFILES.in  meson.build
scripts/ci/: upload-artifacts.sh
scripts/flatpak/: bootstrap.sh  build-install.sh  bundle.sh  install-bundle.sh  release.sh  run.sh
scripts/flatpak-repo/: README.md  add-test-remote.sh  init-codeberg-pages.sh  make-flatpakrepo.sh  master.sh  publish-codeberg-pages.sh  refresh-appstream-offline.sh  verify-appstream.sh
scripts/release/: backupct  bump-version.sh  check-release-consistency.sh  check-shell-format.sh  check-shell-scripts.sh  checkpoint-local.sh  finalize-release-notes.sh  hotfix-flow.sh  lint-shell.sh  list-shell-scripts.sh  maintainer-gate.sh  post-release-check.sh  test-shell.sh  zip-working-tree.sh
scripts/tests/: add-test-remote.bats  backupct.bats  ct-lifecycle.bats  ct-lifecycle.sh  foundation-slots-regression.bats  foundation-slots-regression.sh
src/: application.rs  cardthropic.gresource.xml  config.rs  deck.rs  game.rs  main.rs  meson.build  startup_trace.rs  style.css  window.rs  window.ui  winnability.rs
src/engine/: automation.rs  autoplay.rs  autoplay_search.rs  boundary.rs  commands.rs  foundation_safety.rs  freecell_planner.rs  game_mode.rs  hinting.rs  keyboard_nav.rs  loss_analysis.rs  mod.rs  moves.rs  (+11 more)
(+102 files in other folders)
