[package]
name = "cardthropic"
version = "0.5.1"
edition = "2021"

[dependencies]
gettext-rs = { version = "0.7", features = ["gettext-system"] }
gtk = { version = "0.9", package = "gtk4", features = ["gnome_47"] }
rand = "0.8"
resvg = "0.45"
sourceview5 = "0.9"

[dependencies.adw]
package = "libadwaita"
version = "0.7"
features = ["v1_6"]
